# finbot

./: .gitignore  README.md  bot.py  data.py  logger.py  pyproject.toml  strategy.py  test_strategy.py  trainer.py  visualization.py
models/: lstm.py  prophet_model.py  random_forest.py
